expected/main/gens/primInitArray-neg-32.err
ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 10
external ia3  {primInitArray 3}   :: (Ix 3 -> Init SW) -> Init (Array 3 SW)
         ^
Generator for primInitArray needs at least 2 arguments

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 11
external ia3W {primInitArray 3 W} :: (Ix 3 -> Init SW) -> Init (Array 3 SW)
         ^
No generated implementation: Cannot determine ByteSize for Word

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 12
external iaWW {primInitArray W W} :: (Ix 3 -> Init SW) -> Init (Array 3 SW)
         ^
No generated implementation: Word is not a natural number

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 15
external ia3S {primInitArray 3 S} :: (Ix 3 -> Init S) -> Init (Array 3 S)
         ^
No generated implementation: Element size 6 is not divisible by alignment 4

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 16
external ia7S {primInitArray 7 S} :: (Ix 7 -> Init S) -> Init (Array 7 S)
         ^
No generated implementation: Element size 6 is not divisible by alignment 4

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 17
external ia3U {primInitArray 3 U} :: (Ix 3 -> Init U) -> Init (Array 3 U)
         ^
No generated implementation: Element size 18 is not divisible by alignment 4

ERROR: "actual/main/gens/primInitArray-neg-32.lc", line 18
external ia7U {primInitArray 7 U} :: (Ix 7 -> Init U) -> Init (Array 7 U)
         ^
No generated implementation: Element size 18 is not divisible by alignment 4

ERROR: Aborting after 7 previously reported errors

